--- a/examples/include.am
+++ b/examples/include.am
@@ -11,4 +11,5 @@ include examples/sctp/include.am
 include examples/configs/include.am
 include examples/asn1/include.am
 include examples/pem/include.am
+include examples/ocsp_responder/include.am
 EXTRA_DIST += examples/README.md
