--- a/.github/workflows/ntp.yml
+++ b/.github/workflows/ntp.yml
@@ -44,7 +44,7 @@ jobs:
       fail-fast: false
       matrix:
         # List of releases to test
-        ref: [ 4.2.8p15, 4.2.8p17 ]
+        ref: [ 4.2.8p15, 4.2.8p17, 4.2.8p18 ]
     name: ${{ matrix.ref }}
     if: github.repository_owner == 'wolfssl'
     runs-on: ubuntu-24.04
