--- a/.github/workflows/sssd.yml
+++ b/.github/workflows/sssd.yml
@@ -44,7 +44,7 @@ jobs:
       fail-fast: false
       matrix:
         # List of releases to test
-        ref: [ 2.9.1 ]
+        ref: [ 2.9.1, 2.10.2 ]
     name: ${{ matrix.ref }}
     if: github.repository_owner == 'wolfssl'
     runs-on: ubuntu-24.04
@@ -61,7 +61,8 @@ jobs:
           # Don't prompt for anything
           export DEBIAN_FRONTEND=noninteractive
           sudo apt-get update
-          sudo apt-get install -y build-essential autoconf libldb-dev libldb2 python3-ldb bc
+          sudo apt-get install -y build-essential autoconf libldb-dev \
+            libldb2 python3-ldb bc libcap-dev
 
       - name: Setup env
         run: |
