Rust wrapper: update dilithium module after review

--- a/.github/workflows/rust-wrapper.yml
+++ b/.github/workflows/rust-wrapper.yml
@@ -38,6 +38,7 @@ jobs:
           # Add new configs here
           '',
           '--enable-all',
+          '--enable-all --enable-dilithium',
           '--enable-cryptonly --disable-examples',
           '--enable-cryptonly --disable-examples --disable-aes --disable-aesgcm',
           '--enable-cryptonly --disable-examples --disable-aescbc',
