Rust wrapper: add mlkem module

--- a/.github/workflows/rust-wrapper.yml
+++ b/.github/workflows/rust-wrapper.yml
@@ -39,6 +39,7 @@ jobs:
           '',
           '--enable-all',
           '--enable-all --enable-dilithium',
+          '--enable-all --enable-mlkem',
           '--enable-cryptonly --disable-examples',
           '--enable-cryptonly --disable-examples --disable-aes --disable-aesgcm',
           '--enable-cryptonly --disable-examples --disable-aescbc',
