--- a/testsuite/include.am
+++ b/testsuite/include.am
@@ -12,6 +12,7 @@ testsuite_testsuite_test_SOURCES = \
 			      examples/echoclient/echoclient.c \
 			      examples/echoserver/echoserver.c \
 			      examples/server/server.c \
+			      examples/ocsp_responder/ocsp_responder.c \
 			      testsuite/testsuite.c
 testsuite_testsuite_test_CFLAGS       = -DNO_MAIN_DRIVER $(AM_CFLAGS) $(WOLFSENTRY_INCLUDE)
 testsuite_testsuite_test_LDADD        = src/libwolfssl@LIBSUFFIX@.la $(LIB_STATIC_ADD) $(WOLFSENTRY_LIB)
