Configure wolfSSL to disable old names for softhsm

--- a/.github/workflows/softhsm.yml
+++ b/.github/workflows/softhsm.yml
@@ -25,7 +25,7 @@ jobs:
         uses: wolfSSL/actions-build-autotools-project@v1
         with:
           path: wolfssl
-          configure: --enable-all CFLAGS=-DRSA_MIN_SIZE=1024
+          configure: --enable-all --disable-oldnames CFLAGS=-DRSA_MIN_SIZE=1024
           install: true
           check: false
 
