--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -136,21 +136,7 @@ jobs:
         working-directory: cpython
         run: |
           export LD_LIBRARY_PATH=$GITHUB_WORKSPACE/build-dir/lib:$LD_LIBRARY_PATH
-          rm aclocal.m4
+          rm -f aclocal.m4
           autoreconf -if
           ./configure --with-wolfssl=$GITHUB_WORKSPACE/build-dir
-          make -j test TESTOPTS="-v \
-            test_ssl \
-            test.test_asyncio.test_ssl \
-            test.test_asyncio.test_sslproto \
-            test_hashlib \
-            test_hmac \
-            test_secrets \
-            test_ftplib \
-            test_imaplib \
-            test_poplib \
-            test_smtplib \
-            test_httplib \
-            test_urllib2_localnet \
-            test_xmlrpc \
-            test_docxmlrpc"
+          make -j test TESTOPTS="-v ${{ matrix.tests }}"
